--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,15 +3,31 @@
 <!-- meta fields -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 {{ if .Description }}
-<meta name="description" content="{{ .Description }}" />{{ end }}
+  <meta name="description" content="{{ .Description }}" />
+{{ end }}
 {{ if .Keywords }}
-<meta name="keywords" content="{{ delimit .Keywords "," }}" />{{ end }}
+  <meta name="keywords" content="{{ delimit .Keywords ',' }}" />
+{{ end }}
 {{ if .Params.Author }}
-<meta name="author" content="{{ .Params.Author}}" />{{ end }}
+  <meta name="author" content="{{ .Params.Author }}" />
+{{ end }}
 {{ hugo.Generator }}
 
-<!-- css and js sources -->
-<link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.3.3/dist/tailwind.min.css">
+<!-- favicon -->
+<link rel="icon" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-32x32.jpg" sizes="32x32">
+<link rel="icon" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-192x192.jpg" sizes="192x192">
+<link rel="apple-touch-icon-precomposed" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-180x180.jpg">
+<meta name="msapplication-TileImage" content="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-270x270.jpg">
+
+<!-- css sources -->
+{{ if .Site.IsServer }}
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles.css">
+{{ else }}
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles.final.css">
+{{ end }}
+
+<!-- js sources -->
 <!-- for navigation bar -->
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
