--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,3 @@
-<!-- based on https://www.skcript.com/svr/perfect-seo-meta-tags-with-hugo/ -->
-
 <!-- browser/os display settings -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,99 +6,76 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-touch-fullscreen" content="yes" />
 <meta name="imagemode" content="force" />
-
 <link rel="icon" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-32x32.jpg" sizes="32x32">
 <link rel="icon" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-192x192.jpg" sizes="192x192">
 <link rel="apple-touch-icon-precomposed" href="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-180x180.jpg">
+<!-- not used at the moment -->
+<!-- <meta name="theme-color" content="#141414" /> -->
+<!-- <meta name="msapplication-TileImage" content="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-270x270.jpg"> -->
+<!-- <meta name="msapplication-TileColor" content="#141414" /> -->
+<!-- <meta name="application-name" content="{{ .Title }}" /> -->
 
-<!-- for now these are not used -->
-<!-- <meta name="theme-color" content="#141414" />
-<meta name="msapplication-TileImage" content="{{ .Site.BaseURL }}/cropped-Logo-ikona-storna-270x270.jpg">
-<meta name="msapplication-TileColor" content="#141414" />
-<meta name="application-name" content="{{ .Title }}" /> -->
-
-<!-- search engine crawler tags -->
-<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-
-<!-- title tags -->
-<title itemprop="name">{{- block "title" . }}{{ .Title }}{{ end -}}</title>
-<meta property="og:title" content="{{ .Title }}" />
-<meta name="twitter:title" content="{{ .Title }}" />
-<meta itemprop="name" content="{{ .Title }}" />
-
-<!-- description tags -->
+<title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
 <meta name="description" content="{{ .Description }}" />
-<meta itemprop="description" content="{{ .Description }}" />
-<meta property="og:description" content="{{ .Description }}" />
-<meta name="twitter:description" content="{{ .Description }}" />
-
-<!-- seo and semantic web specific tags -->
-
 {{ if .Keywords }}
   <meta name="keywords" content="{{ delimit .Keywords ',' }}" />
 {{ end }}
+
+<!-- open graph tags -->
+<meta property="og:title" content="{{ .Title }}" />
+<meta property="og:description" content="{{ .Description }}" />
+<meta property="og:image" content="{{ .Params.Image | default .Site.Params.Image | absURL }}" />
 <meta property="og:site_name" content="{{ .Site.Params.SiteName }}" />
-
-<!-- link tags -->
-<base href="{{ .Permalink }}">
-<link rel="canonical" href="{{ .Permalink }}" itemprop="url" />
-<meta name="url" content="{{ .Permalink }}" />
-<meta name="twitter:url" content="{{ .Permalink }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
-
-<!-- language tags -->
 <meta property="og:locale" content="{{ .Language.Lang }}">
-<meta name="language" content="{{ .Language.LanguageName }}">
-{{ range .AllTranslations }}
-  <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}" title="{{ .Language.LanguageName }}">
+
+<!-- twitter tags -->
+<meta name="twitter:title" content="{{ .Title }}" />
+<meta name="twitter:description" content="{{ .Description }}" />
+<meta name="twitter:url" content="{{ .Permalink }}" />
+<meta name="twitter:image" content="{{ .Params.Image | default .Site.Params.Image | absURL }}" />
+<meta name="twitter:image:src" content="{{ .Params.Image | default .Site.Params.Image | absURL }}" />
+<!-- <meta name="twitter:site" content="{{ .Site.Params.twitter }}"> -->
+<!-- <meta name="twitter:creator" content="{{ .Site.Params.twitter }}" /> -->
+
+<!-- facebook tags -->
+
+<!-- search engine crawler specific tags -->
+<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+{{ with .Site.Params.verification.google }}
+  <meta name="google-site-verification" content="{{ . }}" />
+{{ end }}
+{{ with .Site.Params.verification.bing }}
+  <meta name="msvalidate.01" content="{{ . }}" />
+{{ end }}
+{{ with .Site.Params.verification.yandex }}
+  <meta name="yandex-verification" content="{{ . }}" />
+{{ end }}
+{{ with .Site.Params.verification.pinterest }}
+  <meta name="p:domain_verify" content="{{ . }}" />
+{{ end }}
+{{ with .Site.Params.verification.baidu }}
+  <meta name="baidu-site-verification" content="{{ . }}" />
 {{ end }}
 
-<!-- image tags -->
-{{ with .Params.image }}
-  <meta itemprop="image" content="{{ . | absURL }}" />
-  <meta property="og:image" content="{{ . | absURL }}" />
-  <meta name="twitter:image" content="{{ . | absURL }}" />
-  <meta name="twitter:image:src" content="{{ . | absURL }}" />
-{{ else }}
-  <meta itemprop="image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta property="og:image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta name="twitter:image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta name="twitter:image:src" content="{{ .Site.Params.ogimage | absURL }}" />
-{{ end }}
-
-<!-- specific social media tags -->
-<meta name="twitter:site" content="{{ .Site.Params.twitter }}">
-<meta name="twitter:creator" content="{{ .Site.Params.twitter }}" />
-
-<!-- other info -->
+<!-- other meta info -->
 <meta name="coverage" content="Worldwide" />
 <meta name="distribution" content="Global" />
 <meta name="HandheldFriendly" content="True" />
 
-{{- with .Site.Params.verification.google -}}
-  <meta name="google-site-verification" content="{{ . }}" />
-{{- end -}}
-{{- with .Site.Params.verification.bing -}}
-  <meta name="msvalidate.01" content="{{ . }}" />
-{{- end -}}
-{{- with .Site.Params.verification.yandex -}}
-  <meta name="yandex-verification" content="{{ . }}" />
-{{- end -}}
-{{- with .Site.Params.verification.pinterest -}}
-  <meta name="p:domain_verify" content="{{ . }}" />
-{{- end -}}
-{{- with .Site.Params.verification.baidu -}}
-  <meta name="baidu-site-verification" content="{{ . }}" />
-{{- end -}}
+<!-- hugo tags -->
+{{ hugo.Generator }}
 
-<!-- css sources -->
+<!-- translation links -->
+{{ range .AllTranslations }}
+  <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}" title="{{ .Language.LanguageName }}">
+{{ end }}
+
+<!-- css sources links -->
 {{ if .Site.IsServer }}
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles.css">
 {{ else }}
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles.final.css">
 {{ end }}
 
-<!-- js sources -->
-
-<!-- hugo tags -->
-{{ hugo.Generator }}
+<!-- js sources links -->
