--- a/layouts/partials/i18n.html
+++ b/layouts/partials/i18n.html
@@ -4,7 +4,7 @@
   <ul>
     {{ range .Translations }}
       <li>
-        <a href="{{ .Permalink }}">{{ .Lang }}: {{ .Title }}</a>
+        <a href="{{ .Permalink }}">{{ .Lang }}</a>
       </li>
     {{ end }}
   </ul>
