--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,12 +1,12 @@
-{{- define "title" }}
-  {{- T "pageNotFound" | printf "404 %s" }} | {{ .Site.Title -}}
-{{- end -}}
+{{ define "title" }}
+  {{ T "pageNotFound" | printf "404 %s" }} | {{ .Site.Title }}
+{{ end }}
 
-{{- define "main" -}}
+{{ define "main" }}
   <div class="page" id="content-404">
     <p class="error-text">
-      {{- T "pageNotFoundText" -}}&nbsp;
+      {{ T "pageNotFoundText" }}&nbsp;
       <a href="{{ `/` | relLangURL }}" title="{{ T `backToHome` }}">↩︎</a>
     </p>
   </div>
-{{- end -}}
+{{ end }}
