--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,40 +12,14 @@
           </svg>
         </button>
       </div>
+      {{/* viewed only on large */}}
       <nav :class="{'flex': open, 'hidden': !open}" class="hidden flex-col flex-grow py-4 lg:py-0 lg:flex lg:justify-end lg:flex-row">
-        <a class="px-4 py-2 mt-2 font-semibold text-gray-900 bg-gray-200 rounded-lg lg:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-          Blog
-        </a>
-        <a class="px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-          Portfolio
-        </a>
-        <a class="px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-          About
-        </a>
-        <a class="px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-          Contact
-        </a>
-        <div @click.away="open = false" class="relative" x-data="{ open: false }">
-          <button @click="open = !open" class="flex flex-row items-center w-full px-4 py-2 mt-2 font-semibold text-left bg-transparent rounded-lg lg:w-auto lg:inline lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
-            <span>Dropdown</span>
-            <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform lg:-mt-1">
-              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-            </svg>
-          </button>
-          <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="relative right-0 w-full mt-2 origin-top-right rounded-md shadow-lg lg:absolute lg:w-48">
-            <div class="px-2 py-2 bg-white rounded-md shadow">
-              <a class="block px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-                Link #1
-              </a>
-              <a class="block px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-                Link #2
-              </a>
-              <a class="block px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">
-                Link #3
-              </a>
-            </div>
-          </div>
-        </div>
+        {{ range .Site.Sections }}
+          <!-- if section is leaf bundle then display link, otherwise dropdown -->
+          <a class="px-4 py-2 mt-2 font-semibold bg-transparent rounded-lg lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="{{ .Permalink }}">
+            {{ .Title }}
+          </a>
+        {{ end }}
         {{ if .IsTranslated }}
           <div @click.away="open = false" class="relative" x-data="{ open: false }">
             <button @click="open = !open" class="flex flex-row items-center w-full px-4 py-2 mt-2 font-semibold text-left bg-transparent rounded-lg lg:w-auto lg:inline lg:mt-0 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
